@@ -2838,6 +2838,8 @@ precisely it is named @samp{@var{package}-@var{version}.tar.gz}.
 @cvindex PACKAGE
 @cvindex VERSION
 @trindex dist
+You can use the @code{make} variable @samp{GZIP_ENV} to control how gzip
+is run.  The default setting is @samp{--best}.
 
 For the most part, the files to distribute are automatically found by
 Automake: all source files are automatically included in a distribution,
